refactoring and renaming

--- a/src/Domain/Domain.fsproj
+++ b/src/Domain/Domain.fsproj
@@ -4,7 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Board.fs" />
+    <Compile Include="Position.fs" />
+    <Compile Include="Fen.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
