--- a/src/Domain/Domain.fsproj
+++ b/src/Domain/Domain.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Position.fs" />
+    <Compile Include="Move.fs" />
     <Compile Include="Fen.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
